# pySET

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  INSTALL.md  README.md  config.json  config.test.json  generate_distrib_package.bat  generate_distrib_package.sh  pyproject.toml  requirements.txt  server_app.py  view_model_app.py
.github/workflows/: python-ci.yml
flask/: .gitignore  README.md  nuxt.config.ts  package.json  playwright.config.mjs  tsconfig.json
flask/assets/: README.md  helpers.js  states.js  webAppAPI.js
flask/assets/styles/: main.scss
flask/components/: About.vue  HRControl.vue  ModalGenericMessage.vue  PlayerCRUD.vue  PlayerScore.vue  ScoreDetails.vue  SetCard.vue  SetGame.vue  SetGrid.vue  Timers.vue  TurnControl.vue
flask/composables/: useConfig.js
flask/layouts/: default.vue
flask/pages/: index.vue
flask/stores/: game.js
flask/tests/e2e/: about.spec.mjs  game-flow.spec.mjs  helpers.mjs  penalty-and-reset.spec.mjs  player-management.spec.mjs
gunicorn/: dev_app.py  render_app.py
modules/game/: features.py  game.py  player.py  set.py
modules/misc/: helpers.py
modules/web/: app_factory.py
pyset/: server_app.py  session_store.py  view_model_app.py
pyset/modules/game/: features.py  game.py  models.py  player.py  set.py
pyset/modules/misc/: helpers.py  logging_utils.py  logreset.py  models.py
pyset/modules/web/: app_factory.py  models.py
tests/: conftest.py  test_api_integration.py  test_game.py  test_helpers.py  test_player.py  test_session_store.py  test_set.py  test_view_model_app.py
